<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 
    	DASHBOARD
     -->

    <string name="app_name">TechNews</string>
    <string name="app_version">1.1.0</string>
    <string name="welcome_to">Welcome to</string>
    <string name="splash_spritz">" JACMobile presents TechNews. Your source for the latest technology news."</string>

    <string name="dash_360">360</string>
    <string name="dash_fly">Fly</string>
    <string name="dash_settings">Settings</string>
    <string name="dash_help">Help</string>
    <string name="dash_dash">|</string>

    <string name="btn_explore">EXPLORER</string>
    <string name="btn_videos">MY VIDEOS</string>
    <string name="btn_first">RECORD MY FIRST VIDEO</string>
    <string name="btn_signin">SIGN IN</string>

    <!-- 
    	Navigation Drawer
     -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_news">News</string>
    <string name="drawer_latest">Latest</string>
    <string name="drawer_signin">Sign In</string>
    <string name="drawer_explorer">Explorer</string>
    <string name="drawer_videos">My Videos</string>
    <string name="drawer_options">Options</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_record">Record</string>

    <string-array name="action_list">
        <item>NY Times Tech</item>
        <item>Tech Crunch</item>
        <item>Tech Dirt</item>
        <item>Hacker News</item>
        <item>Wired</item>
        <item>Hack A Day</item>
    </string-array>



    <!-- 
    	Signin
     -->
    <string name="sign_in">Sign In</string>
    <string name="signin_username">Username</string>
    <string name="forgot_username">FORGOT YOUR USERNAME?</string>
    <string name="signin_password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="signin_login">Login</string>
    <string name="signin_cancel">Cancel</string>
    <string name="signin_signup">Need an account? Sign up now.</string>
    <string name="signup_facebook">Or sign in using Facebook.</string>


</resources>
