<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dashboard" >

    <!--
VERSION
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_version"
        android:textColor="@color/White"
        android:textSize="@dimen/font_ten" />
    -->

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to"
        android:textColor="@color/White"
        android:textSize="@dimen/font_sixteen" />

    <LinearLayout
        android:id="@+id/ll_dash_gopano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/negative_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash_360"
            android:textColor="@color/White"
            android:textSize="@dimen/font_fortyeight"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_pano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash_fly"
            android:textColor="@color/White"
            android:textSize="@dimen/font_fortyeight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dash_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_first_run"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_eight"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_explore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_eight"
            android:layout_weight="1"
            android:background="@drawable/widget_rounded_shadow"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/btn_explore"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/btn_videos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_eight"
            android:layout_weight="1"
            android:background="@drawable/widget_rounded_shadow"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/btn_videos"
            android:textColor="@color/White" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_first_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_eight"
        android:background="@drawable/widget_rounded_shadow"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/btn_first"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_first_run"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_eight"
        android:background="@drawable/widget_rounded_shadow"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/btn_signin"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tv_dash_dash"
        android:text="@string/dash_help"
        android:textColor="@color/White"
        android:textSize="@dimen/font_sixteen" />

    <TextView
        android:id="@+id/tv_dash_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="@dimen/activity_eight"
        android:paddingRight="@dimen/activity_eight"
        android:text="@string/dash_dash"
        android:textColor="@color/White"
        android:textSize="@dimen/font_sixteen" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tv_dash_dash"
        android:text="@string/dash_settings"
        android:textColor="@color/White"
        android:textSize="@dimen/font_sixteen" />

</RelativeLayout>