<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlack"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin"
    android:weightSum="2" >

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_eight"
        android:padding="@dimen/activity_four"
        android:text="@string/sign_in"
        android:textColor="@color/White"
        android:textSize="@dimen/font_twentyfour" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_signin"
        android:layout_marginBottom="@dimen/activity_eight"
        android:padding="@dimen/activity_four"
        android:text="@string/signin_username"
        android:textSize="@dimen/font_eighteen"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/tv_forgot_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_signin"
        android:layout_marginTop="@dimen/activity_two"
        android:layout_toRightOf="@+id/tv_username"
        android:padding="@dimen/activity_four"
        android:text="@string/forgot_username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/CoolBlue" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:padding="@dimen/activity_four"
        android:background="@drawable/rounded_white" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="@dimen/activity_eight"
        android:padding="@dimen/activity_four"
        android:text="@string/signin_password"
        android:textSize="@dimen/font_eighteen"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="@dimen/twelve_dp"
        android:layout_toRightOf="@+id/tv_password"
        android:padding="@dimen/activity_four"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/CoolBlue" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:layout_marginTop="@dimen/activity_eight"
        android:layout_marginBottom="@dimen/activity_margin"
        android:inputType="textPassword"
        android:padding="@dimen/activity_four"
        android:background="@drawable/rounded_white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_eight"
        android:background="@drawable/coolblue_rounded"
        android:padding="@dimen/activity_four"
        android:text="@string/signin_login"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/activity_eight"
        android:background="@drawable/coolblue_rounded"
        android:padding="@dimen/activity_four"
        android:text="@string/signin_cancel"
        android:textColor="@color/White" />

</RelativeLayout>